--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,17 @@ body{
 .pointer{
     cursor: pointer;
 }
+i{
+    font-size: 1.5rem;
+    color: reds;
+}
+
+.text-dec{
+
+        text-decoration:line-through;
+        text-decoration-thickness: 3px;
+        text-decoration-color: red;
+
+      
+}
+
