--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,29 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: "Roboto", sans-serif;
     background-image: url(../img/oceano\ mare.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     opacity: 0.8;
 }
 
-.pointer{
+.pointer {
     cursor: pointer;
 }
-i{
+
+i {
     font-size: 1.5rem;
     color: red;
 }
 
-.text-dec{
+.text-dec {
+  
+    text-decoration: line-through;
+    text-decoration-thickness: 3px;
+    text-decoration-color: red;
 
-        text-decoration:line-through;
-        text-decoration-thickness: 3px;
-        text-decoration-color: red;
 
-      
 }
-
