--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ i {
     text-decoration: line-through;
     text-decoration-thickness: 3px;
     text-decoration-color: red;
-
-
+}
+#app{
+    margin-top: 50px;
+    border: 2px solid #000;
+    border-radius: 30px;
+    background-color: rgba(128, 128, 128, 0.469);
 }
